# sam-faces

./: .gitignore  PROJECT.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sam_faces/: __init__.py  cli.py  database.py  enroll.py  enroll_face.py  face_db.py  identify.py  identify_faces.py  visualize.py
scripts/: setup.sh
tests/: conftest.py  test_cli.py  test_database.py  test_identify.py
